--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,63 +1,3 @@
-.App{
-    height: 100vh;
-    padding: 0px 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.books{
-    display: flex;
-    gap: 10px;
-}
-
-.book{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-img{
-    width: 200px;
-    height: 300px;
-    object-fit: cover;
-    background-color: aquamarine;
-}
-
-.delete{
-    padding: 3px 6px;
-    background-color: #fff;
-    cursor: pointer;
-    border: 1px solid rgb(245, 191, 191);
-    color: rgb(242, 100, 100);
-}
-.update{
-    padding: 3px 6px;
-    background-color: #fff;
-    cursor: pointer;
-    border: 1px solid rgb(204, 204, 243);
-    color: rgb(139, 139, 234);
-}
-
-.form{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-input{
-    width: 250px;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-}
-
-.update{
-    padding: 3px 6px;
-    background-color: #fff;
-    cursor: pointer;
-    border: 1px solid rgb(250, 196, 47);
-    color: rgb(235, 144, 39);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
